Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21063

Very many test failures on big-endian PowerPC

    XMLWordPrintable

Details

    Description

      The builder kvm-rpm-centos73-ppc64 builder is effectively disabled from running any tests on 10.5, because it aborts very early:

      bb-10.5-19708

      Too many failed: Failed 8/80 tests, 90.00% were successful.
       
      Failing test(s): binlog_encryption.encrypted_slave binlog_encryption.encrypted_master_switch_to_unencrypted binlog_encryption.encrypted_master binlog_encryption.rpl_loadfile binlog_encryption.rpl_switch_stm_row_mixed
      

      This was first observed in the bb-10.5-19708 branch:
      http://buildbot.askmonty.org/buildbot/builders/kvm-rpm-centos73-ppc64/builds/10061/steps/mtr/logs/stdio
      The previous 10.5 build on that platform completed fine:
      http://buildbot.askmonty.org/buildbot/builders/kvm-rpm-centos73-ppc64/builds/10047/
      Ever since the problematic push to 10.5, the platform has been broken:
      http://buildbot.askmonty.org/buildbot/builders/kvm-rpm-centos73-ppc64/builds/10069

      The culprit seems to be MDEV-20477 Merge binlog extended metadata support from the upstream.

      Attachments

        Issue Links

          Activity

            People

              sachin.setiya.007 Sachin Setiya (Inactive)
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 7.25h
                  1d 7.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.