MDEV-21063 Very many test failures on big-endian PowerPC

Memcpy is endian dependent, So instead of memcpy we will use int2store.
And m_metadata_size can be 0,1 or 2, And int2store will take care of it.